@@ -61,6 +61,19 @@
         </dependency>
 
 
+        <!-- JSON support：org.json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20210307</version>
+        </dependency>
+
+        <!-- OkHttp dependency -->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.9.2</version>
+        </dependency>
         <!-- Encryption support：jBCrypt -->
         <dependency>
             <groupId>org.mindrot</groupId>
@@ -86,6 +99,7 @@
 
     <build>
         <plugins>
+            <!-- Maven Compiler Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -101,6 +115,10 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>org.group35.Main</mainClass>
+                    <options>
+                        <option>--sun-misc-unsafe-memory-access=allow</option>
+                        <option>--enable-native-access=ALL-UNNAMED,javafx.graphics</option>
+                    </options>
                 </configuration>
             </plugin>
 
@@ -125,18 +143,5 @@
 
         </plugins>
     </build>
-
-    <repositories>
-        <repository>
-            <id>tencent</id>
-            <url>https://mirrors.cloud.tencent.com/nexus/repository/maven-public/</url>
-        </repository>
-    </repositories>
-    <pluginRepositories>
-        <pluginRepository>
-            <id>tencent</id>
-            <url>https://mirrors.cloud.tencent.com/nexus/repository/maven-public/</url>
-        </pluginRepository>
-    </pluginRepositories>
 
 </project>
